src/objects/Bank_Details__c.object
<CustomObject>
    <description>Child object of Account to store bank details</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Details</relationshipLabel>
        <relationshipName>Bank_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Transformed_Number__c</fullName>
        <description>This field is a transformation of the Bank Account field. A validation rule is using this field to validate the Back Account field.</description>
        <formula>IF( 
OR( BEGINS( Bank_Account__c , &quot;4&quot;), 
BEGINS(Bank_Account__c, &quot;5&quot;)), 
LEFT( Bank_Account__c, 7) + 
LPAD(RIGHT(RIGHT( Bank_Account__c, LEN( Bank_Account__c)-7), 7), 7, &quot;0&quot;) 
, 
LEFT( Bank_Account__c, 6) + 
LPAD(RIGHT(RIGHT( Bank_Account__c, LEN( Bank_Account__c)-6), 8), 8, &quot;0&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Transformed Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <label>Bank Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Country__c</fullName>
        <label>Bank Country</label>
        <picklist>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Compound_SFID__c</fullName>
        <description>This field is holding the compound key for the bank details object. It consists of the Bank Country ID, Bank Key ID, Bank Account and the Accounts Involved Party ID.</description>
        <externalId>true</externalId>
        <label>Bank Details Compound SFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bank_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Key</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Bank Country must match Bank Key Country</errorMessage>
            <filterItems>
                <field>$Source.Bank_Country__c</field>
                <operation>equals</operation>
                <valueField>Bank_Key__c.Country__c</valueField>
            </filterItems>
            <infoMessage>Only Bank Keys that have the same country as the Bank details will be shown</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Key__c</referenceTo>
        <relationshipLabel>Bank Details</relationshipLabel>
        <relationshipName>Bank_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Type__c</fullName>
        <label>Bank Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN_Number__c</fullName>
        <label>IBAN Number</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_Attorney_for_Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power of Attorney for Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Bank_Key__c</columns>
        <columns>Bank_Account__c</columns>
        <columns>Bank_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>Bank Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bank_Account_Checksum_Check_FI</fullName>
        <active>true</active>
        <description>If Bank Country is Finland then the Bank Account Number must pass a custom validation rule.</description>
        <errorConditionFormula>AND( ISPICKVAL( Bank_Country__c , &quot;FI&quot;), 
LEN( Bank_Account__c) &gt; 0, 
MOD( 
VALUE(MID(Bank_Account_Transformed_Number__c, 2, 1))+ 
VALUE(MID(Bank_Account_Transformed_Number__c, 4, 1))+ 
VALUE(MID(Bank_Account_Transformed_Number__c, 6, 1))+ 
VALUE(MID(Bank_Account_Transformed_Number__c, 8, 1))+ 
VALUE(MID(Bank_Account_Transformed_Number__c, 10, 1))+
VALUE(MID(Bank_Account_Transformed_Number__c, 12, 1))+
VALUE(MID(Bank_Account_Transformed_Number__c, 14, 1))+

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 1, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 1, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 1, 1))*2 
)+ 

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 3, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 3, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 3, 1))*2 
)+ 

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 5, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 5, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 5, 1))*2 
)+ 

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 7, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 7, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 7, 1))*2 
)+

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 9, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 9, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 9, 1))*2 
)+

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 11, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 11, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 11, 1))*2 
)+

IF( VALUE(MID(Bank_Account_Transformed_Number__c, 13, 1))*2 &gt; 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 13, 1))*2 - 9, 
VALUE(MID(Bank_Account_Transformed_Number__c, 13, 1))*2 
) 
,10) &lt;&gt; 0) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>This is not a valid Bank Account Number in Finland</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Number_Length_Check_DE</fullName>
        <active>true</active>
        <description>If Bank Country is Germany then the Bank Account Number must at maximum be 14 digits long</description>
        <errorConditionFormula>AND (ISPICKVAL( Bank_Country__c , &apos;DE&apos;), 
LEN( Bank_Account__c ) &gt; 14, 
LEN( Bank_Account__c ) &gt; 0 
) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>If Bank Country is Germany then the Bank Account Number must at maximum be 14 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Number_Length_Check_DK</fullName>
        <active>true</active>
        <description>If Bank Country is Denmark then the Bank Account Number must at maximum be 11 digits long</description>
        <errorConditionFormula>AND (ISPICKVAL( Bank_Country__c , &apos;DK&apos;), 
LEN( Bank_Account__c ) &gt; 11, 
LEN( Bank_Account__c ) &gt; 0 
) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>If Bank Country is Denmark then the Bank Account Number must at maximum be 11 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Number_Length_Check_FI</fullName>
        <active>true</active>
        <description>If Bank Country is Finland then the Bank Account Number must at maximum be 15 digits long</description>
        <errorConditionFormula>AND (ISPICKVAL( Bank_Country__c , &apos;FI&apos;), 
LEN( Bank_Account__c ) &gt; 15, 
LEN( Bank_Account__c ) &gt; 0 
) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>If Bank Country is Finland then the Bank Account Number must at maximum be 15 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Number_Length_Check_NO</fullName>
        <active>true</active>
        <description>If Bank Country is Norway then the Bank Account Number must be 11 digits long</description>
        <errorConditionFormula>AND (ISPICKVAL( Bank_Country__c , &apos;NO&apos;), 
LEN( Bank_Account__c ) != 11, 
LEN( Bank_Account__c ) &gt; 0 
) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>If Bank Country is Norway then the Bank Account Number must be 11 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bank_Account_Number_Length_Check_SE</fullName>
        <active>true</active>
        <description>If Bank Country is Sweden then the Bank Account Number must at maximum be 18 digits long</description>
        <errorConditionFormula>AND (ISPICKVAL( Bank_Country__c , &apos;SE&apos;), 
LEN( Bank_Account__c ) &gt; 18, 
LEN( Bank_Account__c ) &gt; 0 
) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>If Bank Country is Sweden then the Bank Account Number must at maximum be 18 digits long</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Bank_Acct_field_after_create</fullName>
        <active>true</active>
        <description>Bank Account is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Bank_Account__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Account__c</errorDisplayField>
        <errorMessage>Bank Account field may not be updated. If you need to update the Bank Account field please create a new Bank Details record and delete this Bank Details record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Bank_Cntry_field_after_create</fullName>
        <active>true</active>
        <description>Bank Country is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Bank_Country__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Country__c</errorDisplayField>
        <errorMessage>Bank Country field may not be updated. If you need to update the Bank Country field please create a new Bank Details record and delete this Bank Details record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_Bank_Key_field_after_create</fullName>
        <active>true</active>
        <description>Bank Key is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Bank_Key__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Bank_Key__c</errorDisplayField>
        <errorMessage>Bank Key field may not be updated. If you need to update the Bank Key field please create a new Bank Details record and delete this Bank Details record.</errorMessage>
    </validationRules>
</CustomObject>